<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="view"
            type="com.reza.base.presentation.profile.ProfileView" />

        <variable
            name="vm"
            type="com.reza.base.presentation.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ln_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_rounded_white_border"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_title" />

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_user_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line1" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@{vm.bTextEmail}"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/iv_profile"
                app:layout_constraintTop_toBottomOf="@id/line1"
                tools:text="Reza Kurniawan" />

            <TextView
                android:id="@+id/txt_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{vm.bTextSex}"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/iv_profile"
                app:layout_constraintTop_toBottomOf="@id/txt_email"
                tools:text="@string/profile_sex" />

            <TextView
                android:id="@+id/txt_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{vm.bTextPhone}"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/iv_profile"
                app:layout_constraintTop_toBottomOf="@id/txt_sex"
                tools:text="@string/profile_phone" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/blue_button"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{v ->view.onClickLogout(v)}"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/profile_logout_button"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_profile"
                tools:ignore="UnusedAttribute" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>